[package]
name = "weather_download"
version = "0.1.0"
authors = ["chengpengfei <hoolooday@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3.5"
reqwest = "0.11.3"